# snaprepo

./: .gitignore  Makefile  README.md  pyproject.toml  snaprepo.spec
.github/workflows/: release_github_action.yml
completions/: snaprepo.bash
snaprepo/: __init__.py  config.py  main.py  test_snaprepo.py
